# Reowolf

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  main.c  reowolf.h  rustfmt.toml
examples/: check.c  eg_protocols.pdl  forward.pdl  utility.c
examples/0_forward/: alice  alice.c  bob  bob.c  make.sh
examples/1_load_pdl/: amy.c  bob.c  make.sh
examples/1_socketlike/: amy.c  bob.c  make.sh
examples/2_atomic_swap/: amy.c  bob.c
examples/2_dynamic_pdl/: amy.c  bob.c  make.sh
examples/3_atomicity/: amy.c  bob.c
examples/3_nondeterminism/: amy.c  bob.c
examples/4_atomicity/: amy.c  bob.c
examples/4_nondeterminism/: amy.c  make.sh
examples/5_recovery/: amy.c  bob.c  make.sh
examples/6_constraint_solve/: main.c  make.sh
src/: common.rs  lib.rs  macros.rs
src/protocol/: ast.rs  eval.rs  inputsource.rs  lexer.rs  library.rs  mod.rs  parser.rs
src/runtime/: actors.rs  batches.rs  bits.rs  communication.rs  connector.rs  ecs.rs  endpoint.rs  errors.rs  ffi.rs  mod.rs  polyp.rs  predicate.rs  serde.rs  setup.rs
src/runtime/experimental/: api.rs  bits.rs  mod.rs  predicate.rs  vec_storage.rs
src/test/: connector.rs  mod.rs  net.rs  setup.rs
testdata/connector/duo/: 1.apdl  1.bpdl
testdata/eval/positive/: 1.pdl  10.pdl  11.pdl  2.pdl  3.pdl  4.pdl  5.pdl  6.pdl  6.txt  7.pdl  8.pdl  9.pdl
testdata/parser/negative/: 1.pdl  1.txt  10.pdl  10.txt  12.pdl  12.txt  13.pdl  13.txt  14.pdl  14.txt  17.pdl  17.txt  18.pdl  18.txt  19.pdl  19.txt  2.pdl  2.txt  20.txt  22.pdl  22.txt  23.pdl  23.txt  24.pdl  24.txt  25.pdl  25.txt  26.pdl  26.txt  3.pdl  (+25 more)
(+21 files in other folders)
